# opengl_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
src/: camera.h  framebuffer.cpp  framebuffer.h  glslprogram.cpp  glslprogram.h  inputHandler.h  main_window.h  model.h  object.h  opengl_renderer.cpp  renderer.h  scene.h  shader.h  texture.h  ui.h  window.h
src/shaders/: fragment_shader.frag  light_fragment_shader.frag  vertex_shader.vert
